Deleted the Xlog:gc in datanode-env.bat
As the title said